--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ edition = "2018"
 cairo-rs = { version = "0.9.1", features = ["pdf"] }
 cairo-sys-rs = { version = "0.10.0", features = ["pdf"] }
 
-# for poppler
 glib = "0.10.3"
 glib-sys = "0.10.1"
 gobject-sys = "0.10.0"
+libc = "0.2.86"
 
 thiserror = "1.0.24"
