--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ readme = "README.md"
 edition = "2018"
 
 [dependencies]
-cairo-rs = { version = "0.9.1", features = ["pdf"] }
-cairo-sys-rs = { version = "0.10.0", features = ["pdf"] }
+cairo-rs = { version = "0.9.1", features = ["pdf","png","svg", "ps"] }
+cairo-sys-rs = { version = "0.10.0", features = ["pdf","png","svg", "ps"] }
 
 glib = "0.10.3"
 glib-sys = "0.10.1"
